--- a/main.tex
+++ b/main.tex
@@ -79,10 +79,16 @@ Chipmunks are smol.
 
 \end{abstract}
 
+%\[
+%2\beta < c^{n\mu} \cdot q^{1/(n\mu)}-1 \quad\quad
+%\sqrt{n \mu} \beta < c^{n\mu}\sqrt{\frac{n\mu}{2 \pi e}} q^{1/\mu}
+%\]
+
 %% Paper sections
 \input{sections/intro}
 \input{sections/prelim}
 \input{sections/veccom}
+\input{sections/onetimesig}
 \input{sections/multisig}
 \input{sections/benchmarks}
 
